--- a/SeleniumUITestCsharp/packages.config
+++ b/SeleniumUITestCsharp/packages.config
@@ -3,6 +3,7 @@
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net48" />
   <package id="MSTest.TestAdapter" version="2.2.10" targetFramework="net48" />
   <package id="MSTest.TestFramework" version="2.2.10" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="Selenium.RC" version="3.1.0" targetFramework="net48" />
   <package id="Selenium.Support" version="4.8.0" targetFramework="net48" />
   <package id="Selenium.WebDriver" version="4.8.0" targetFramework="net48" />
