--- a/SeleniumUITestCsharp/example.app.config
+++ b/SeleniumUITestCsharp/example.app.config
@@ -1,8 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<appSettings>
-		<add key="Url" value="https://demowebshop.tricentis.com" />
-		<add key="Email" value="san.abreu1.1234567892121a@test.com" />
+		<!--
+        Take this file as an example.
+        Change the name of this file to "app.config".
+        Change the "value" of the "keys".
+        -->
+		<add key="Url" value="https://example.com" />
+		<add key="Email" value="user@example.com" />
 		<add key="Password" value="123456" />
 	</appSettings>
   <runtime>
